--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "apollo-cache": "^1.1.17",
-    "apollo-cache-inmemory": "^1.3.5"
+    "apollo-cache-inmemory": "^1.3.5",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@types/graphql": "0.9.4",
